--- a/SAE/Sudoku/SAE_Sacha/.vscode/settings.json
+++ b/SAE/Sudoku/SAE_Sacha/.vscode/settings.json
@@ -1,10 +1,15 @@
 {
     "cSpell.words": [
+        "chgmts",
+        "creer",
+        "dpll",
         "evaluer",
         "litteral",
         "resol",
+        "retablir",
         "satisfiabilité",
         "simpl",
+        "ultim",
         "valua",
         "wowowow"
     ]
