gitignore still sucks

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 # OR only to exclude workspace cache
 .obsidian/workspace/*
 # is causing error sometime 
-.obsidian/workspace.json
+/.obsidian/workspace.json
 
 # Exclude plugins
 #.obsidian/plugins/*
