--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 .obsidian/workspace/*
 # is causing error sometime 
 /.obsidian/workspace.json
+.obsidian/workspace.json
 
 # Exclude plugins
 #.obsidian/plugins/*
